@@ -62,8 +62,9 @@ char *hpd_up =
         "  -r [-u]               Rebuild dirlog based on filesystem data\n"
         "                           .folders file (see MANUAL) defines a list of dirs in SITEROOT to scan\n"
         "                           -u - only import new records and do not truncate existing dirlog\n"
-        "                           -f - ignore .folders file and do a full recursive scan\n"
+        "                           --full - ignore .folders file and do a full recursive scan\n"
         "                           --indepth - scans each imported directory recursivelly\n"
+        "                           --nonukecheck - disable checking dir nuke status in nukelog\n"
         "  -c, --check [--fix] [--ghost]\n"
         "                        Compare dirlog and filesystem records and warn on differences\n"
         "                          --fix attempts to correct dirlog/filesystem\n"
