@@ -49,6 +49,7 @@
 #define F_GH_ISSCONF                    (a64 << 37)
 #define F_GH_LOCKED                     (a64 << 38)
 #define F_GH_ISGCONF                    (a64 << 39)
+#define F_GH_ARR_DIST                   (a64 << 40)
 
 /* these bits determine log type */
 #define F_GH_ISTYPE                     (F_GH_ISGCONF|F_GH_ISSCONF|F_GH_ISGENERIC4|F_GH_ISGENERIC3|F_GH_ISGENERIC2|F_GH_ISGENERIC1|F_GH_ISNUKELOG|F_GH_ISDIRLOG|F_GH_ISDUPEFILE|F_GH_ISLASTONLOG|F_GH_ISONELINERS|F_GH_ISONLINE|F_GH_ISIMDB|F_GH_ISGAME|F_GH_ISFSX|F_GH_ISTVRAGE)
